Fixed Contact Link out of bounds

--- a/src/components/Dashboard/Navbar/Navbar.css
+++ b/src/components/Dashboard/Navbar/Navbar.css
@@ -58,7 +58,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    left: 60%;
+    left: 55%;
 }
 
 .nav_item:not(:last-child) {
